welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:7: error: ')' expected but 'if' found.
	if(getCouleurSol == Color.green) {
        ^SlugTracking:11: error: 'while' expected but 'if' found.
	if(solVert == true) {
        ^SlugTracking:20: error: '(' expected but '}' found.
	}
        ^SlugTracking:26: error: Unmatched closing brace '}' ignored here
}
^